--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -64,7 +64,7 @@
 }
 
 @keyframes drive {
-    0% {
+    /* 0% {
         left: -55px;
         transform: translateY(0) rotate(0deg);
         width: 0;
@@ -141,7 +141,7 @@
 
     99% {
         transform: translateY(-1px) rotate(1deg);
-    }
+    } */
 
     100% {
         left: calc(((100vw - 1440px) / 2) + 64px);
