--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -27,10 +27,10 @@
     left: -3px;
     bottom: 16px;
     filter: blur(1px);
-    background-color: var(--button);
+    /* background-color: var(--button); */
     opacity: 0;
-    transition: background-color 0.3s ease-in-out, filter 0.3s ease-in-out,
-        opacity 0.3s ease-in-out;
+    /* transition: background-color 0.3s ease-in-out, filter 0.3s ease-in-out,
+        opacity 0.3s ease-in-out; */
 }
 
 .link:hover::before {
@@ -47,19 +47,19 @@
     left: 54px;
     bottom: 16px;
     filter: blur(1px);
-    background-color: white;
+    /* background-color: white; */
     opacity: 0;
-    transition: background-color 0.3s ease-in-out, filter 0.3s ease-in-out,
+    /* transition: background-color 0.3s ease-in-out, filter 0.3s ease-in-out,
         opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-    transform: scaleX(1);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.5);
+    transform: scaleX(1); */
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow:  #475467;
 }
 
 .link:hover::after {
     opacity: 1;
-    width: 25px;
+    width: 5px;
     box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.5);
 }
 
@@ -144,8 +144,8 @@
     } */
 
     100% {
-        left: calc(((100vw - 1440px) / 2) + 64px);
-        transform: translateY(0) rotate(0deg);
+        left:  64px;
+        /* transform: translateY(0) rotate(0deg); */
         width: 58px;
         height: 55px;
     }
@@ -155,17 +155,17 @@
     animation: drive 2.5s ease-in-out forwards;
 }
 
-.logoText {
+/* .logoText {
     font-size: 24px;
     font-weight: bold;
     white-space: nowrap;
     transition: transform 2.5s ease-in-out, text-shadow 0.3s ease-in-out;
-}
+} */
 
-.link.show~.logoText {
+/* .link.show~.logoText {
     transform: translateX(80px);
 }
 
 .link:hover~.logoText {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
+} */
