--- a/src/components/WelcomePage/WelcomePage.module.css
+++ b/src/components/WelcomePage/WelcomePage.module.css
@@ -19,18 +19,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 50px;
 }
 
 .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 50px;
     transition: transform 0.3s ease;
 }
 
 .logo:hover {
-    transform: scale(1.5);
+    transform: scale(1.2) translateY(50px);
 }
 
 .LogoSvg {
@@ -48,4 +49,9 @@
 .logo:hover .LogoSvg path {
     fill: red;
     /* замінити на потрібний колір */
+}
+
+.Camper {
+     width: 80%;
+        min-height: 500px;
 }
